--- a/resume.html
+++ b/resume.html
@@ -15,22 +15,32 @@
     </header>
 
     <main>
-      <img src="senior.jpg" alt width="320" />
+      <img src="senior.jpg" alt="photo of olivia coto" width="320" />
       <p>Olivia Coto is a freshman at The University of Miami majoring in Media Management.
         She likes to go to the gym and go out with friends.
         In her free time, she cooks and watches New Girl.</p>
+    </main>
+    <!-- You will not be able to see this text. --> 
         <h3>University of Miami</h3>
+
         <table>
-          <tr>
-            <th>Classes</th>
-          </tr>
+          <th>Classes</th>
           <tr>
             <td>English Composition</td>
+          </tr>
+          <tr>
             <td>Intro to Public Relations</td>
+          </tr>
+          <tr>
             <td>Intro to Advertising</td>
+          </tr>
+          <tr>
             <td>Understanfing Media and Content</td>
+          </tr>
+          <tr>
             <td>Web Lab</td>
-       </tr>
+          </tr>
+      </table>
 
         <h4>Experience</h4>
         <ul>
@@ -67,3 +77,9 @@
             <li>Email: oac30@miami.edu</li>
             <li><a href="https://www.instagram.com/oliviacoto/">Instagram: oliviacoto</a></li>
             <li><address> 1239 Dickinson Drive Coral Gables FL 33146</address></li>
+        </footer>
+
+
+      </body>
+
+      </html>
