--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <title>Olivia Coto Resume</title>
     <meta charset="utf-8" />
     <meta name="author" content="Olivia C." >
-    <meta name="keywords" content="basic website" />
+    <meta name="keywords" content="basic website" >
   </head>
 
   <body>
@@ -20,7 +20,7 @@
         She likes to go to the gym and go out with friends.
         In her free time, she cooks and watches New Girl.</p>
     </main>
-    <!-- You will not be able to see this text. --> 
+    <!-- You will not be able to see this text. -->
         <h3>University of Miami</h3>
 
         <table>
