--- a/resume2.html
+++ b/resume2.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Olivia Coto Resume</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <meta name="author" content="Olivia C." >
     <meta name="keywords" content="basic website" >
   </head>
