--- a/resumefinal2.html
+++ b/resumefinal2.html
@@ -5,23 +5,39 @@
     <meta charset="utf-8" >
     <meta name="author" content="Olivia C." >
     <meta name="keywords" content="basic website" >
-  </head>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+</head>
 
   <body>
+
+<div id="head">
     <header>
+      <div class="title">
       <h1>
         Olivia Coto
   </h1>
+</div>
     </header>
+  </div>
 
     <main>
+      <div class="center">
       <img src="senior.jpg" alt="photo of olivia coto" width="320" />
+    </div>
+      <div class="bod">
       <p>Olivia Coto is a freshman at The University of Miami majoring in Media Management.
         She likes to go to the gym and go out with friends.
         In her free time, she cooks and watches New Girl.</p>
+      </div>
     </main>
     <!-- You will not be able to see this text. -->
+    <div class="tablecenter">
+    <div id="right">
+      <div class="theu">
         <h3>University of Miami</h3>
+      </div>
 
         <table>
           <th>Classes</th>
@@ -41,15 +57,27 @@
             <td>Web Lab</td>
           </tr>
       </table>
+    </div>
+  </div>
 
+
+
+<div class="head">
+    <div class="title">
         <h4>Experience</h4>
+      </div>
+    </div>
         <ul>
           <li>Kairos Retreat Leader in Spring 2017</li>
           <li>Confirmation Retreat Leader from 2015-2017</li>
           <li>2017 National Charity Leauge Debutante</li>
         </ul>
 
+<div class="head">
+  <div class="title">
         <h4>Interests</h4>
+      </div>
+    </div>
         <ul>
           <li>Makeup</li>
           <li>Music</li>
@@ -57,7 +85,11 @@
           <li>Cooking</li>
         </ul>
 
+<div class="head">
+  <div class="title">
         <h4>Skills</h4>
+      </div>
+      </div>
         <ul>
           <li>makeup</li>
           <li>photography</li>
@@ -65,12 +97,16 @@
           <li>drums</li>
           <li>camp counselor/coordinator</li>
         </ul>
-       </main>
+    </main>
 
       <br>
 
       <footer>
+        <div class="ect">
+          <div id="head">
         <h3>Contact Me</h3>
+      </div>
+    </div>
           <ul>
             <li><a href="http://www.oliviaamber.com/">blog</a></li>
             <li>Email: oac30@miami.edu</li>
